--- a/열혈C++예제연습/열혈C++예제연습.vcxproj
+++ b/열혈C++예제연습/열혈C++예제연습.vcxproj
@@ -143,12 +143,14 @@
     <ClCompile Include="Test01_1.cpp" />
     <ClCompile Include="Test01_2.cpp" />
     <ClCompile Include="Test01_3.cpp" />
+    <ClCompile Include="Test02_1.cpp" />
     <ClCompile Include="열혈C++예제연습.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Test01_1.h" />
     <ClInclude Include="Test01_2.h" />
     <ClInclude Include="Test01_3.h" />
+    <ClInclude Include="Test02_1.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
