--- a/열혈C++예제연습/열혈C++예제연습.vcxproj
+++ b/열혈C++예제연습/열혈C++예제연습.vcxproj
@@ -116,7 +116,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -144,6 +144,11 @@
     <ClCompile Include="Test01_2.cpp" />
     <ClCompile Include="Test01_3.cpp" />
     <ClCompile Include="Test02_1.cpp" />
+    <ClCompile Include="Test02_2.cpp" />
+    <ClCompile Include="Test02_3.cpp" />
+    <ClCompile Include="Test02_4.cpp" />
+    <ClCompile Include="Test03_1.cpp" />
+    <ClCompile Include="Test03_2.cpp" />
     <ClCompile Include="열혈C++예제연습.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -151,6 +156,11 @@
     <ClInclude Include="Test01_2.h" />
     <ClInclude Include="Test01_3.h" />
     <ClInclude Include="Test02_1.h" />
+    <ClInclude Include="Test02_2.h" />
+    <ClInclude Include="Test02_3.h" />
+    <ClInclude Include="Test02_4.h" />
+    <ClInclude Include="Test03_1.h" />
+    <ClInclude Include="Test03_2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
