--- a/열혈C++예제연습/열혈C++예제연습.vcxproj
+++ b/열혈C++예제연습/열혈C++예제연습.vcxproj
@@ -149,6 +149,9 @@
     <ClCompile Include="Test02_4.cpp" />
     <ClCompile Include="Test03_1.cpp" />
     <ClCompile Include="Test03_2.cpp" />
+    <ClCompile Include="Test04_2.cpp" />
+    <ClCompile Include="Test04_3.cpp" />
+    <ClCompile Include="Test05_1.cpp" />
     <ClCompile Include="열혈C++예제연습.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -161,6 +164,9 @@
     <ClInclude Include="Test02_4.h" />
     <ClInclude Include="Test03_1.h" />
     <ClInclude Include="Test03_2.h" />
+    <ClInclude Include="Test04_2.h" />
+    <ClInclude Include="Test04_3.h" />
+    <ClInclude Include="Test05_1.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
