--- a/열혈C++예제연습/열혈C++예제연습.vcxproj
+++ b/열혈C++예제연습/열혈C++예제연습.vcxproj
@@ -152,6 +152,9 @@
     <ClCompile Include="Test04_2.cpp" />
     <ClCompile Include="Test04_3.cpp" />
     <ClCompile Include="Test05_1.cpp" />
+    <ClCompile Include="Test07_1.cpp" />
+    <ClCompile Include="Test07_2.cpp" />
+    <ClCompile Include="Test08_1.cpp" />
     <ClCompile Include="열혈C++예제연습.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -167,6 +170,9 @@
     <ClInclude Include="Test04_2.h" />
     <ClInclude Include="Test04_3.h" />
     <ClInclude Include="Test05_1.h" />
+    <ClInclude Include="Test07_1.h" />
+    <ClInclude Include="Test07_2.h" />
+    <ClInclude Include="Test08_1.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
