--- a/열혈C++예제연습/열혈C++예제연습.vcxproj
+++ b/열혈C++예제연습/열혈C++예제연습.vcxproj
@@ -155,6 +155,8 @@
     <ClCompile Include="Test07_1.cpp" />
     <ClCompile Include="Test07_2.cpp" />
     <ClCompile Include="Test08_1.cpp" />
+    <ClCompile Include="Test10_1.cpp" />
+    <ClCompile Include="Test10_2.cpp" />
     <ClCompile Include="열혈C++예제연습.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -173,6 +175,8 @@
     <ClInclude Include="Test07_1.h" />
     <ClInclude Include="Test07_2.h" />
     <ClInclude Include="Test08_1.h" />
+    <ClInclude Include="Test10_1.h" />
+    <ClInclude Include="Test10_2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
