--- a/열혈C++예제연습/열혈C++예제연습.vcxproj.filters
+++ b/열혈C++예제연습/열혈C++예제연습.vcxproj.filters
@@ -33,6 +33,9 @@
     <Filter Include="헤더 파일\Chap8">
       <UniqueIdentifier>{8ab6c3b1-a391-4dc5-bb81-655853ea98b3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="헤더 파일\Chap10">
+      <UniqueIdentifier>{fe05cb25-0fed-43b6-9b44-6337b6c6d671}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Test01_1.cpp">
@@ -83,6 +86,12 @@
     <ClCompile Include="Test08_1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Test10_1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Test10_2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Test02_2.h">
@@ -129,6 +138,12 @@
     </ClInclude>
     <ClInclude Include="Test08_1.h">
       <Filter>헤더 파일\Chap8</Filter>
+    </ClInclude>
+    <ClInclude Include="Test10_1.h">
+      <Filter>헤더 파일\Chap10</Filter>
+    </ClInclude>
+    <ClInclude Include="Test10_2.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
