--- a/열혈C++예제연습/열혈C++예제연습.vcxproj
+++ b/열혈C++예제연습/열혈C++예제연습.vcxproj
@@ -157,6 +157,8 @@
     <ClCompile Include="Test08_1.cpp" />
     <ClCompile Include="Test10_1.cpp" />
     <ClCompile Include="Test10_2.cpp" />
+    <ClCompile Include="Test11_1.cpp" />
+    <ClCompile Include="Test11_2.cpp" />
     <ClCompile Include="열혈C++예제연습.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -177,6 +179,8 @@
     <ClInclude Include="Test08_1.h" />
     <ClInclude Include="Test10_1.h" />
     <ClInclude Include="Test10_2.h" />
+    <ClInclude Include="Test11_1.h" />
+    <ClInclude Include="Test11_2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
