--- a/열혈C++예제연습/열혈C++예제연습.vcxproj.filters
+++ b/열혈C++예제연습/열혈C++예제연습.vcxproj.filters
@@ -39,6 +39,9 @@
     <Filter Include="헤더 파일\Chap11">
       <UniqueIdentifier>{e69116e4-f4ac-47e8-b6d1-db1fe283502b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="헤더 파일\Chap12">
+      <UniqueIdentifier>{85fac897-526f-4b68-bd02-42ec07c3a658}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Test01_1.cpp">
@@ -101,6 +104,9 @@
     <ClCompile Include="Test11_2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="String.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Test02_2.h">
@@ -158,7 +164,10 @@
       <Filter>헤더 파일\Chap11</Filter>
     </ClInclude>
     <ClInclude Include="Test11_2.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>헤더 파일\Chap11</Filter>
+    </ClInclude>
+    <ClInclude Include="String.h">
+      <Filter>헤더 파일\Chap12</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
