--- a/열혈C++예제연습/열혈C++예제연습.vcxproj.filters
+++ b/열혈C++예제연습/열혈C++예제연습.vcxproj.filters
@@ -42,6 +42,9 @@
     <Filter Include="헤더 파일\Chap12">
       <UniqueIdentifier>{85fac897-526f-4b68-bd02-42ec07c3a658}</UniqueIdentifier>
     </Filter>
+    <Filter Include="헤더 파일\Chap13">
+      <UniqueIdentifier>{39431f54-2e33-4937-a0fc-443534757b5f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Test01_1.cpp">
@@ -107,6 +110,12 @@
     <ClCompile Include="String.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Test13_1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Test13_2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Test02_2.h">
@@ -168,6 +177,12 @@
     </ClInclude>
     <ClInclude Include="String.h">
       <Filter>헤더 파일\Chap12</Filter>
+    </ClInclude>
+    <ClInclude Include="Test13_1.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Test13_2.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
