--- a/열혈C++예제연습/열혈C++예제연습.vcxproj.filters
+++ b/열혈C++예제연습/열혈C++예제연습.vcxproj.filters
@@ -179,10 +179,10 @@
       <Filter>헤더 파일\Chap12</Filter>
     </ClInclude>
     <ClInclude Include="Test13_1.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>헤더 파일\Chap13</Filter>
     </ClInclude>
     <ClInclude Include="Test13_2.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>헤더 파일\Chap13</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
